--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
 
-    <header class="cabecera">
-        <div class="container">
-            <img src="img/sass-color.png" alt="">
-            <h1> Práctica 6</h1>
-            <h2>Diseño de interfaces web - Preprocesador CSS: SASS</h2>
+    <header class="container">
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <img src="img/sass-color.png">
+            </div>
+            <div class="col-12 col-md-9">
+                <h1 class="titulo"> Práctica 6</h1>
+            <h2 class="titulo">Diseño de interfaces web - Preprocesador CSS: SASS</h2>
+            </div>
         </div>
-        <nav>
-            <ul>
-                <li>Redes Sociales</li>
-                <li>Paleta de colores</li>
-                <li>Carta de fuentes</li>
-            </ul>
+        <nav class="nav">
+            <a href="redes_sociales.html">Redes Sociales</a>
+            <a href="paleta_colores.html">Paleta de colores</a>
+            <a href="#">Carta de fuentes</a>
         </nav>
     </header>
 </body>
