--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,50 +8,72 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
 
-    <header class="cabecera">
-        <div class="container">
-            <img src="img/sass-color.png" alt="">
-            <h1> Práctica 6</h1>
-            <h2>Diseño de interfaces web - Preprocesador CSS: SASS</h2>
-        </div>
-        <nav>
-            <ul>
-                <li>Redes Sociales</li>
-                <li>Paleta de colores</li>
-                <li>Carta de fuentes</li>
-            </ul>
+    <header class="container">
+        <aside class="row">
+            <div class="col-12 col-md-3">
+                <img src="img/sass-color.png">
+            </div>
+            <div class="col-12 col-md-9">
+                <h1 class="titulo"> Práctica 6</h1>
+                <h2 class="titulo">Redes Sociales</h2>
+            </div>
+        </aside>
+        <nav class="nav">
+            <a href="index.html">atras</a>
         </nav>
     </header>
 
-    <aside>
+    <section class="container">
         <div class="row">
-            <div class="col">
+            <aside class="col-12 col-md-6 col-lg-4">
                 <img src="logos/facebook.png" alt="">
-                <p></p>
-            </div>
-            <div class="col">
+                <p><span>Facebook</span><br>es un servicio de redes y medios sociales en línea estadounidense con sede
+                    en Menlo Park, California.
+                </p>
+
+            </aside>
+            <aside class="col-12 col-md-6 col-lg-4">
                 <img src="logos/linkedin.png" alt="">
-                <p></p>
-            </div>
-            <div class="col">
+
+                <p><span>Linkedin</span><br>es una red social orientada al uso empresarial, a los negocios y al empleo.
+                </p>
+
+            </aside>
+            <aside class="col-12 col-md-6 col-lg-4">
                 <img src="logos/instagram.png" alt="">
-                <p></p>
-            </div>
-            <div class="col">
+
+                <p><span>Instagram</span><br>es una aplicación y red social de origen estadounidense.</p>
+            </aside>
+            <aside class="col-12 col-md-6 col-lg-4">
                 <img src="logos/youtube.png" alt="">
-                <p></p>
-            </div>
-            <div class="col">
+
+                <p><span>Youtube</span><br>es un sitio web de origen estadounidense dedicado a compartir videos.</p>
+            </aside>
+            <aside class="col-12 col-md-6 col-lg-4">
                 <img src="logos/twitter.png" alt="">
-                <p></p>
-            </div>
-            <div class="col">
+
+                <p><span>Twitter</span><br>es una red social gratuita que te permite escribir mensajes de forma rápida y
+                    sencilla. </p>
+            </aside>
+            <aside class="col-12 col-md-6 col-lg-4">
                 <img src="logos/pinterest.png" alt="">
-                <p></p>
-            </div>
+
+                <p><span>Pinterest</span><br>es una red social de colecciones de imágenes como eventos, intereses,
+                    aficiones y mucho más.</p>
+            </aside>
         </div>
-    </aside>
+    </section>
+
+    <footer class="container">
+        <nav class="nav">
+            <a>Miguel Caceda</a>
+            <a href="https://github.com/mikkype/practica6Sass.git">Github</a>
+            <a>Fecha: Enero 2024</a>
+        </nav>
+    </footer>
 </body>
+
 </html>
