--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -12,17 +12,18 @@
 <body>
 
     <header class="container">
-        <aside class="row">
+        <div class="row">
             <div class="col-12 col-md-3">
-                <img src="img/sass-color.png">
+                <img src="img/sass-color.png" class="img-sass">
             </div>
             <div class="col-12 col-md-9">
                 <h1 class="titulo"> Práctica 6</h1>
-                <h2 class="titulo">Redes Sociales</h2>
+            <h2 class="titulo">Redes Sociales</h2>
             </div>
-        </aside>
-        <nav class="nav">
-            <a href="index.html">atras</a>
+        </div>
+        <nav>
+            <a href="index.html">atrás</a>
+            
         </nav>
     </header>
 
@@ -66,14 +67,6 @@
             </aside>
         </div>
     </section>
-
-    <footer class="container">
-        <nav class="nav">
-            <a>Miguel Caceda</a>
-            <a href="https://github.com/mikkype/practica6Sass.git">Github</a>
-            <a>Fecha: Enero 2024</a>
-        </nav>
-    </footer>
 </body>
 
 </html>
