--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header class="container">
         <div class="row">
             <div class="col-12 col-md-3">
-                <img src="img/sass-color.png">
+                <img src="img/sass-color.png" class="img-sass">
             </div>
             <div class="col-12 col-md-9">
                 <h1 class="titulo"> Práctica 6</h1>
             <h2 class="titulo">Diseño de interfaces web - Preprocesador CSS: SASS</h2>
             </div>
         </div>
-        <nav class="nav">
+        <nav>
             <a href="redes_sociales.html">Redes Sociales</a>
             <a href="paleta_colores.html">Paleta de colores</a>
             <a href="#">Carta de fuentes</a>
