--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -18,55 +18,88 @@
             </div>
             <div class="col-12 col-md-9">
                 <h1 class="titulo"> Práctica 6</h1>
-            <h2 class="titulo">Redes Sociales</h2>
+                <h2 class="titulo">Redes Sociales</h2>
             </div>
         </div>
         <nav>
             <a href="index.html">atrás</a>
-            
+
         </nav>
     </header>
 
-    <section class="container">
+    <aside class="container">
+
         <div class="row">
-            <aside class="col-12 col-md-6 col-lg-4">
-                <img src="logos/facebook.png" alt="">
-                <p><span>Facebook</span><br>es un servicio de redes y medios sociales en línea estadounidense con sede
-                    en Menlo Park, California.
-                </p>
 
+            <aside class="col-12 col-md-6 col-lg-4 facebook">
+                <div>
+                    <img src="logos/facebook.png" alt="">
+                </div>
+                <div>
+                    <p class="strong">Facebook<p>
+                    <p>es un servicio de redes y medios sociales en línea estadounidense con sede en Menlo Park,
+                        California.</p>
+                </div>
             </aside>
-            <aside class="col-12 col-md-6 col-lg-4">
-                <img src="logos/linkedin.png" alt="">
 
-                <p><span>Linkedin</span><br>es una red social orientada al uso empresarial, a los negocios y al empleo.
-                </p>
-
+            <aside class="col-12 col-md-6 col-lg-4 linkedin">
+                <div>
+                    <img src="logos/linkedin.png" alt="">
+                </div>
+                <div>
+                    <p class="strong">Linkedin</p>
+                    <p>es una red social orientada al uso empresarial, a los negocios y al empleo.
+                    </p>
+                </div>
             </aside>
-            <aside class="col-12 col-md-6 col-lg-4">
-                <img src="logos/instagram.png" alt="">
 
-                <p><span>Instagram</span><br>es una aplicación y red social de origen estadounidense.</p>
+            <aside class="col-12 col-md-6 col-lg-4 instagram">
+                <div><img src="logos/instagram.png" alt="">
+                </div>
+                <div>
+                    <p class="strong">Instagram</p>
+                    <p>es una aplicación y red social de origen estadounidense.</p>
+                </div>
             </aside>
-            <aside class="col-12 col-md-6 col-lg-4">
-                <img src="logos/youtube.png" alt="">
 
-                <p><span>Youtube</span><br>es un sitio web de origen estadounidense dedicado a compartir videos.</p>
+            <aside class="col-12 col-md-6 col-lg-4 youtube">
+                <div>
+                    <img src="logos/youtube.png" alt="">
+                </div>
+                <div>
+                    <p class="strong">Youtube</p>
+                    <p>es un sitio web de origen estadounidense dedicado a compartir videos.</p>
+                </div>
             </aside>
-            <aside class="col-12 col-md-6 col-lg-4">
-                <img src="logos/twitter.png" alt="">
 
-                <p><span>Twitter</span><br>es una red social gratuita que te permite escribir mensajes de forma rápida y
-                    sencilla. </p>
+            <aside class="col-12 col-md-6 col-lg-4 twitter">
+                <div>
+                    <img src="logos/twitter.png" alt="">
+                </div>
+                <div>
+                    <p class="strong">Twitter</p>
+                    <p>es una red social gratuita que te permite escribir mensajes de forma rápida y sencilla. </p>
+                </div>
             </aside>
-            <aside class="col-12 col-md-6 col-lg-4">
-                <img src="logos/pinterest.png" alt="">
 
-                <p><span>Pinterest</span><br>es una red social de colecciones de imágenes como eventos, intereses,
-                    aficiones y mucho más.</p>
+            <aside class="col-12 col-md-6 col-lg-4 pinterest">
+                <div>
+                    <img src="logos/pinterest.png" alt="">
+                </div>
+                <div>
+                    <p class="strong"><span>Pinterest</span><br>es una red social de colecciones de imágenes como eventos,
+                        intereses,aficiones y mucho más.</p>
+                </div>
             </aside>
         </div>
-    </section>
-</body>
+    </aside>
 
+    <footer class="container">
+
+        <p>Miguel Caceda</p>
+        <p><a href="https://github.com/mikkype/practica6Sass.git">Github</a></p>
+        <p>Fecha: Enero 2024</p>
+
+    </footer>
+</body>
 </html>
