--- a/paleta_colores.html
+++ b/paleta_colores.html
@@ -36,10 +36,11 @@
                 <h3>Colores Principales</h3>
                 <p>Estos son los colores de nuestro sitio web</p>
             </div>
+            
             <div class="row">
                 <!--springgreen-->
                 <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col springgreen item-color "></div>
+                    <div class="col springgreen"></div>
                     <div class="col-12 item">
                         <p class="strong">Nombre:</p>
                         <p>springgreen</p>
@@ -55,7 +56,7 @@
                 </div>
                 <!--darkorchid-->
                 <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col-12 darkorchid item-color"></div>
+                    <div class="col-12 darkorchid"></div>
                     <div class="col-12 item">
                         <p class="strong">Nombre :</p>
                         <p>darkorchid</p>
@@ -71,7 +72,7 @@
                 </div>
                 <!--darkslategray-->
                 <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col-12 darkslategray item-color"></div>
+                    <div class="col-12 darkslategray"></div>
                     <div class="col-12 item">
                         <p class="strong">Nombre :</p>
                         <p>darkslategray</p>
@@ -87,7 +88,7 @@
                 </div>
                 <!--dodgerblue-->
                 <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col-12 dodgerblue item-color"></div>
+                    <div class="col-12 dodgerblue"></div>
                     <div class="col-12 item">
                         <p class="strong">Nombre :</p>
                         <p>dodgerblue</p>
@@ -114,8 +115,8 @@
             <section class="container">
                 <div class="row">
 
-                    <div class="col-md-6 col-lg-3">
-                        <div class="row fila-color">
+                    <div class="col-md-6 col-lg-3 mb-4">
+                        <div class="row ">
                             <div class="col">
                                 <p class="strong">springgreen</p>
                                 <div class="row">
@@ -127,8 +128,8 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-3">
-                        <div class="row fila-color">
+                    <div class="col-md-6 col-lg-3 mb-4">
+                        <div class="row ">
                             <div class="col">
                                 <p class="strong">darkorchid</p>
                                 <div class="row">
@@ -141,8 +142,8 @@
                     </div>
 
 
-                    <div class="col-md-6 col-lg-3">
-                        <div class="row fila-color">
+                    <div class="col-md-6 col-lg-3 mb-4">
+                        <div class="row ">
                             <div class="col">
                                 <p class="strong">darkslategray</p>
                                 <div class="row">
@@ -155,7 +156,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-3">
-                        <div class="row fila-color">
+                        <div class="row">
                             <div class="col">
                                 <p class="strong">dodgerblue</p>
                                 <div class="row">
