--- a/paleta_colores.html
+++ b/paleta_colores.html
@@ -18,12 +18,12 @@
             </div>
             <div class="col-12 col-md-9">
                 <h1 class="titulo"> Práctica 6</h1>
-            <h2 class="titulo">Paleta de Colores</h2>
+                <h2 class="titulo">Paleta de Colores</h2>
             </div>
         </div>
         <nav>
             <a href="index.html">atrás</a>
-        
+
         </nav>
     </header>
 
@@ -34,9 +34,9 @@
 
             <div>
                 <h3>Colores Principales</h3>
-                <p>Estos son los colores de nuestro sitio web</p>
+                <p>Estos son los colores de nuestro sitio web.</p>
             </div>
-            
+
             <div class="row">
                 <!--springgreen-->
                 <div class="col-12 col-md-6 col-lg-3">
@@ -110,64 +110,67 @@
             <p>Estos colores son variaciones de tonalidad de nuestros colores primarios (25% más de claro,normal y 75%
                 más
                 oscuros) útiles para hovers,ilustraciones o pequeñas variaciones.</p>
+                <section class="container">
 
-
-            <section class="container">
                 <div class="row">
+                    <!--springgreen-->
 
-                    <div class="col-md-6 col-lg-3 mb-4">
-                        <div class="row ">
-                            <div class="col">
-                                <p class="strong">springgreen</p>
-                                <div class="row">
-                                    <div class="col item-color bg-secondary">col1</div>
-                                    <div class="col item-color bg-primary">col2</div>
-                                    <div class="col item-color bg-danger-subtle">col3</div>
-                                </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div>
+                            <p class="strong">springgreen </p>
+                        </div>
+                        <div class="col ">
+                            <div class="row row-center">
+                                <div class="col t1light"></div>
+                                <div class="col t1"></div>
+                                <div class="col t1dark"></div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-6 col-lg-3 mb-4">
-                        <div class="row ">
-                            <div class="col">
-                                <p class="strong">darkorchid</p>
-                                <div class="row">
-                                    <div class="col item-color bg-black">col4</div>
-                                    <div class="col item-color bg-dark-subtle">col5</div>
-                                    <div class="col item-color bg-danger-subtle">col6</div>
-                                </div>
+
+                    </div>
+                    <!--darkorchid-->
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div>
+                            <p class="strong">darkorchid </p>
+                        </div>
+                        <div class="col-12 ">
+                            <div class="row row-center">
+                                <div class="col t2light"></div>
+                                <div class="col t2"></div>
+                                <div class="col t2dark"></div>
                             </div>
                         </div>
+
                     </div>
-
-
-                    <div class="col-md-6 col-lg-3 mb-4">
-                        <div class="row ">
-                            <div class="col">
-                                <p class="strong">darkslategray</p>
-                                <div class="row">
-                                    <div class="col item-color bg-black">col7</div>
-                                    <div class="col item-color bg-dark-subtle">col8</div>
-                                    <div class="col item-color bg-danger-subtle">col9</div>
-                                </div>
+                    <!--darkslategray-->
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div>
+                            <p class="strong">darkslategray</p>
+                        </div>
+                        <div class="col-12 ">
+                            <div class="row row-center">
+                                <div class="col t3light"></div>
+                                <div class="col t3"></div>
+                                <div class="col t3dark"></div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-6 col-lg-3">
-                        <div class="row">
-                            <div class="col">
-                                <p class="strong">dodgerblue</p>
-                                <div class="row">
-                                    <div class="col item-color bg-black">col10</div>
-                                    <div class="col item-color bg-body-secondary">col11</div>
-                                    <div class="col item-color bg-primary">col12</div>
-                                </div>
+                    </div>
+                    <!--dodgerblue-->
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div>
+                            <p class="strong">dodgerblue </p>
+                        </div>
+                        <div class="col-12 ">
+                            <div class="row row-center">
+                                <div class="col t4light"></div>
+                                <div class="col t4"></div>
+                                <div class="col t4dark"></div>
                             </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </section>
 
