--- a/redes_sociales.html
+++ b/redes_sociales.html
@@ -37,7 +37,7 @@
                 </div>
                 <div>
                     <p class="strong">Facebook<p>
-                    <p>es un servicio de redes y medios sociales en línea estadounidense con sede en Menlo Park,
+                    <p>Es un servicio de redes y medios sociales en línea estadounidense con sede en Menlo Park,
                         California.</p>
                 </div>
             </aside>
@@ -48,7 +48,7 @@
                 </div>
                 <div>
                     <p class="strong">Linkedin</p>
-                    <p>es una red social orientada al uso empresarial, a los negocios y al empleo.
+                    <p>Es una red social orientada al uso empresarial, a los negocios y al empleo.
                     </p>
                 </div>
             </aside>
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <p class="strong">Instagram</p>
-                    <p>es una aplicación y red social de origen estadounidense.</p>
+                    <p>Es una aplicación y red social de origen estadounidense.</p>
                 </div>
             </aside>
 
@@ -68,7 +68,7 @@
                 </div>
                 <div>
                     <p class="strong">Youtube</p>
-                    <p>es un sitio web de origen estadounidense dedicado a compartir videos.</p>
+                    <p>Es un sitio web de origen estadounidense dedicado a compartir videos.</p>
                 </div>
             </aside>
 
@@ -78,7 +78,7 @@
                 </div>
                 <div>
                     <p class="strong">Twitter</p>
-                    <p>es una red social gratuita que te permite escribir mensajes de forma rápida y sencilla. </p>
+                    <p>Es una red social gratuita que te permite escribir mensajes de forma rápida y sencilla. </p>
                 </div>
             </aside>
 
@@ -87,7 +87,8 @@
                     <img src="logos/pinterest.png" alt="">
                 </div>
                 <div>
-                    <p class="strong"><span>Pinterest</span><br>es una red social de colecciones de imágenes como eventos,
+                    <p class="strong">Pinterest</p>
+                    <p >Es una red social de colecciones de imágenes como eventos,
                         intereses,aficiones y mucho más.</p>
                 </div>
             </aside>
